Add meta properties for linkedin post

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <title>Covid-19 Tracker App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property='og:title' content='Covid-19 Tracker App'/>
+  <meta property='og:image' content='./corona-tracker-social-image.png'/>
+  <meta property='og:description' content='Covid-19 Tracker App, developed by Jake Lin and powered by Angular'/>
+  <meta property='og:url' content='https://jake-08.github.io/covid-tracker.github.io/#/'/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
