Update meta properties for linkedin post

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property='og:title' content='Covid-19 Tracker App'/>
-  <meta property='og:image' content='./corona-tracker-social-image.png'/>
-  <meta property='og:description' content='Covid-19 Tracker App, developed by Jake Lin and powered by Angular'/>
+  <meta property='og:image' content='./assets/corona-tracker-social-image.png'/>
+  <meta property='og:description' content='The cat is out of the bag! 🐈 After months of grinding and learning this technology, I am super delighted to share my first Angular Application with you all. It is called “Covid19 Tracker App”. The app will show you the covid cases around the world and you can search by country or continent. I even created a separate page for Australia for Australians to have easy access. 😉 The technologies that I used in this app are Angular 13.0, Bootstrap 5, and Chart.js.'/>
   <meta property='og:url' content='https://jake-08.github.io/covid-tracker.github.io/#/'/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
